logs/em-transliteration.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/em_transliteration'...
Compiling './lib/python3.5/site-packages/em_transliteration/comboEntry.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/comboEntry.py", line 20
    print 'I choose', model[index][0]
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/em_transliteration/comboTextView.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/comboTextView.py", line 9
    print 'I choose', model[index][0]
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/em_transliteration/langs_filter.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/langs_filter.py", line 12
    print 'splits are', splits
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/em_transliteration/list_generator.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/list_generator.py", line 28
    print 'buffer is', buff
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/em_transliteration/textview.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/textview.py", line 5
    print keyname
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/em_transliteration/ui.py'...
***   File "./lib/python3.5/site-packages/em_transliteration/ui.py", line 13
    print str_buff
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/em_transliteration-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
